CMAKE_MINIMUM_REQUIRED(VERSION 3.10.0)

project(Exercises)

find_package(OpenCV REQUIRED)

add_executable(exercise_01 src/exercise_01.cpp)
add_executable(exercise_02 src/exercise_02.cpp)
add_executable(exercise_03 src/exercise_03.cpp)
add_executable(exercise_04 src/exercise_04.cpp)
add_executable(exercise_05 src/exercise_05.cpp)
add_executable(exercise_06 src/exercise_06.cpp)
add_executable(exercise_07 src/exercise_07.cpp)
add_executable(exercise_08 src/exercise_08.cpp)
add_executable(exercise_09 src/exercise_09.cpp)
add_executable(exercise_10 src/exercise_10.cpp)
add_executable(exercise_11 src/exercise_11.cpp)


target_link_libraries(exercise_01 ${OpenCV_LIBS})
target_link_libraries(exercise_02 ${OpenCV_LIBS})
target_link_libraries(exercise_03 ${OpenCV_LIBS})
target_link_libraries(exercise_04 ${OpenCV_LIBS})
target_link_libraries(exercise_05 ${OpenCV_LIBS})
target_link_libraries(exercise_06 ${OpenCV_LIBS})
target_link_libraries(exercise_07 ${OpenCV_LIBS})
target_link_libraries(exercise_08 ${OpenCV_LIBS})
target_link_libraries(exercise_09 ${OpenCV_LIBS})
target_link_libraries(exercise_10 ${OpenCV_LIBS})
target_link_libraries(exercise_11 ${OpenCV_LIBS})